<resources>
    <string name="app_name">Happy&amp;Healthy</string>
    <string name="title_activity_home">Home</string>

    <string name="fullname">Fullname</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create">Create</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
    <string name="passwords_must_be_the_same">Password and password again field must be the same</string>
</resources>
